# crwd-py

./: README.md  docker-compose.yml
.github/workflows/: ci-docker.yml
crwd/: Dockerfile  Makefile
crwd/crwd/: pyproject.toml  setup.cfg
crwd/crwd/crwd/tests/: test_initial.py
crwd/webapp/: pyproject.toml  setup.cfg
