[tool.poetry]
name = "crwd"
version = "0.1.0"
description = ""
authors = ["Kristoffer Andersson <kod.kristoff@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
flake8 = "^3.9.2"
wemake-python-styleguide = "^0.15.3"
autopep8 = "^1.5.7"
isort = "^5.9.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
