[tool.poetry]
name = "crwd-webapp"
version = "0.1.0"
description = ""
authors = ["Kristoffer Andersson <kod.kristoff@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.68.1"
uvicorn = "^0.15.0"
crwd = {path = "../crwd", develop = true}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
