[metadata]
name = crwd-webapp
license = MIT
description-file = README.md
description-content-type = text/markdown
author = Kristoffer Andersson
author_email = kod.kristoff@gmil.com
home-page = https://github.com/kod-kristoff/crwd-py
project_urls =
	Bug Tracker = https://github.com/kod-kristoff/crwd-py/issues
	Documentation = https://github.com/kod-kristoff/crwd-py
	Source Code = https://github.com/kod-kristoff/crwd-py
classifier =
	Development Status :: 2 - Pre-Alpha
	Intended Audience :: Developers
	License :: OSI Approved :: MIT License
	Operating System :: Unix
	Operating System :: POSIX
	Operating System :: Microsoft :: Windows
	Programming Language :: Python
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: Implementation :: CPython
	Topic :: Utilities

[files]
packages =
    webapp

[extras]
dev =
	flake8
	pytest
	wemake-python-styleguide
    autopep8

[tool:pytest]
testpaths = tests
junit_family = xunit1

[coverage:run]
branch = true
source =
	webapp

[pycodestyle]
max-line-length = 97

